minor fixes for fragments and cols alignment to match current site better

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -66,7 +66,6 @@
 
 @media (min-width: 600px) {
   .columns .row {
-    align-items: center;
     flex-direction: unset;
     gap: 24px;
   }
